// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-u",
  ],
  "_": [
    "ncu",
  ],
  "p": [
    "ncu2",
    "ncu",
  ],
  "package": [
    "ncu2",
    "ncu",
  ],
}
`;

exports[`test snap [
  '-p',
  'yo',
  '-p',
  'generator-eslint',
  '--debugMode',
  'yo',
  'eslint:rule'
] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "eslint:rule",
  ],
  "_": [
    "yo",
  ],
  "debug-mode": true,
  "debugMode": true,
  "p": [
    "yo",
    "generator-eslint",
  ],
  "package": [
    "yo",
    "generator-eslint",
  ],
}
`;

exports[`test snap [
  '-p',
  'yo',
  '-p',
  'generator-eslint-typescript',
  'yo',
  '--',
  'eslint:plugin'
] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "eslint:plugin",
  ],
  "_": [
    "yo",
  ],
  "p": [
    "yo",
    "generator-eslint-typescript",
  ],
  "package": [
    "yo",
    "generator-eslint-typescript",
  ],
}
`;

exports[`test snap [
  '-p',  'esm',
  '-p',  'ts-node',
  '-p',  'mocha',
  '--',  '-r',
  'esm'
] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-r",
    "esm",
  ],
  "_": [],
  "p": [
    "esm",
    "ts-node",
    "mocha",
  ],
  "package": [
    "esm",
    "ts-node",
    "mocha",
  ],
}
`;

exports[`test snap [
  'create-next-app',
  '--example',
  'with-typescript-graphql',
  'with-typescript-graphql-app'
] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "--example",
    "with-typescript-graphql",
    "with-typescript-graphql-app",
  ],
  "_": [
    "create-next-app",
  ],
}
`;

exports[`test snap [ '-p', 'xxx', 'yyy', '-p' ] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-p",
  ],
  "_": [
    "yyy",
  ],
  "p": "xxx",
  "package": [
    "xxx",
  ],
}
`;

exports[`test snap [ '-q', '--ignore-existing', 'cowsay', '--', 'test' ] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "test",
  ],
  "_": [
    "cowsay",
  ],
  "ignore-existing": true,
  "ignoreExisting": true,
  "q": true,
  "quiet": true,
}
`;

exports[`test snap [ '-q', '--ignore-existing', 'cowsay@latest', '--', 'test' ] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "test",
  ],
  "_": [
    "cowsay@latest",
  ],
  "ignore-existing": true,
  "ignoreExisting": true,
  "q": true,
  "quiet": true,
}
`;

exports[`test snap [ 'cowsay', '-q', '--ignore-existing', '--', 'test' ] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-q",
    "--ignore-existing",
    "--",
    "test",
  ],
  "_": [
    "cowsay",
  ],
}
`;

exports[`test snap [ 'speedtest', '--', '-q' ] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-q",
  ],
  "_": [
    "speedtest",
  ],
}
`;

exports[`test snap [ 'speedtest', '-q' ] 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-q",
  ],
  "_": [
    "speedtest",
  ],
}
`;

exports[`test2 1`] = `
{
  "$0": Any<String>,
  "--": [
    "-u",
  ],
  "_": [
    "ncu",
  ],
  "p": [
    "ncu2",
    "ncu",
  ],
  "package": [
    "ncu2",
    "ncu",
  ],
}
`;
